--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
+  },
+  "peerDependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
